# cryptoquote-solver

./: CMakeLists.txt  dictionary.cpp  dictionary.h  license.txt  main.cpp  quote.cpp  quote.h
crypto/: letterset.cpp  letterset.h  solver.cpp  solver.h
